--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,34 @@
+/*First background to green, 46px height*/
+.beginning {
+   padding-right: 145px;
+   padding-top: 15px;
+   padding-bottom: 15px;
+   background-color: #4c8930;
+   color: white;
+   text-align: right;
+}
+/*Links to regular looking text*/
+.beginning a {
+   text-decoration: none;
+   color: white;
+}
+/*Seach button to green in beginning*/
+.search {
+   background-color: #4c8930;
+   color: white;
+}
+/*Resizing logo*/
+.logo{
+   width: 20%;
+   min-width: 150px;
+   padding-top: 10px;
+   padding-right: 5px;
+   margin-bottom: 20px;
+}
+.searchbar {
+   text-align: right;
+}
 nav {
    padding-left: 130px;
    padding-right: 130px;
-   margin-top: 15px;
-   margin-bottom: 15px;
-   background-color: white;
-}
-a {
-   text-decoration: none !important;
-   color: white;
-}
-header.btn {
-   width: 178px;
-   text-align: left;
-}
-.form-control {
-   width: 130px !important;
-}
-.beginning {
-   background-color: #4c8930;
-   padding: 10px;
-   padding-right: 130px;
-}
-
-.dropdown-toggle::after {
-   margin-left: 70px;
-}
-.nav-link {
-   color: lightgray;
-}
-a.navbar-brand {
-width: 100px;
 }
