--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,11 @@
+/*Max width and font used of the page*/
+body {
+   max-width: 1400px;
+   font-family: 'Open Sans', sans-serif;
+}
 /*First background to green, 46px height*/
 .beginning {
-   padding-right: 145px;
+   padding-right: 140px;
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: #4c8930;
@@ -8,27 +13,79 @@
    text-align: right;
 }
 /*Links to regular looking text*/
-.beginning a {
+.link {
    text-decoration: none;
    color: white;
+   padding-right: 20px;
 }
-/*Seach button to green in beginning*/
-.search {
+/*The language select list adjustments*/
+.ddown {
+   width: 178px;
+   text-align: left;
+   margin-right: ;
+}
+.ddown::after {
+   margin-left: 65px;
+}
+.dropdown-item {
+   color: black;
+}
+/*Button colors*/
+.buttons {
    background-color: #4c8930;
    color: white;
+   margin-left: 10px;
+   padding-left: 12px;
 }
 /*Resizing logo*/
 .logo{
-   width: 20%;
-   min-width: 150px;
+   max-width: 150px;
    padding-top: 10px;
    padding-right: 5px;
-   margin-bottom: 20px;
+   margin-bottom: 10px;
+   margin-right: 50px;
 }
-.searchbar {
-   text-align: right;
-}
+/*Navbar to specific width*/
 nav {
    padding-left: 130px;
    padding-right: 130px;
+}
+/*Navbar links to a different colour*/
+.nav-link {
+   color: lightgray;
+}
+/*Float form to right side*/
+.floater {
+   float: right;
+   clear: both;
+}
+/*Searchbar width fix*/
+.box {
+   width: 176px;
+}
+/*Parallax effect to front pages first image*/
+.parallax {
+   background-image: url("analyst.jpg");
+   width: 100%;
+   min-height: 419px;
+   
+   background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+/*To show items over parallax- or normal image*/
+.overlay-text {
+   display: flex;
+   color: white;
+   height: 100%;
+   align-items: center;
+   justify-content: center;
+
+}
+/*Text on top of parallax image*/
+.overlay-text-margin {
+   font-size: 42px;
+   margin-top: 143px;
+   padding-bottom: 30px;
 }
